data/derived/sp14/progs/unify/prog1540.ml.out
Characters 12-14:
  let _ = exp 10;;
              ^^
Error: This expression has type int but an expression was expected of type
         float
